--- a/Lead_Gen_Pipeline copy.ipynb
+++ b/Lead_Gen_Pipeline copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "328e86f8",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fa7f0eb2",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "[6734 rows x 4 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "e678fbe3",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "37b264bf",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "[537328 rows x 9 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "32f4bc21",
    "metadata": {},
    "outputs": [
@@ -707,7 +707,7 @@
        "4                            Retail Sale Of Textiles  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "0e62740a",
    "metadata": {},
    "outputs": [],
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "ede8f881",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1104,7 @@
        "[537328 rows x 13 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "2c28478d",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
        "(533824, 13)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,12 +1155,12 @@
    "id": "21bd24ab",
    "metadata": {},
    "source": [
-    "### Filter by Wholesale Industry"
+    "### Filter by  Industry (Wholesale)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "aa058f54",
    "metadata": {},
    "outputs": [
@@ -1464,7 +1464,7 @@
        "[38428 rows x 13 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
