delete some stuff

--- a/Lead_Gen_Pipeline copy.ipynb
+++ b/Lead_Gen_Pipeline copy.ipynb
@@ -19,6 +19,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e9e07b7",
+   "metadata": {},
+   "source": [
+    "<!-- go to recordowl, if got phone number & websites then use\n",
+    "\n",
+    "if only have websites go to the websites to get contact details, \n",
+    "\n",
+    "if only have social media, get contact details through there \n",
+    " -->\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "767bf86c",
    "metadata": {},
    "source": [
