--- a/MasterDB_Mapping.ipynb
+++ b/MasterDB_Mapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "id": "c689a14f",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "id": "05458f04",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "id": "6d155561",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "id": "f8dd514d",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "23873515",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "[0 rows x 62 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "id": "a9b4cdc2",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "c0eba9c5",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "4            WOODLANDS STREET 12      738623  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "id": "2d81163f",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
        "4                            Retail Sale Of Textiles  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "id": "f79b32c5",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
        "[537328 rows x 18 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "id": "09f916f9",
    "metadata": {},
    "outputs": [],
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "id": "44cda046",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1461,7 @@
        "[5 rows x 62 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "id": "114889be",
    "metadata": {},
    "outputs": [
@@ -1530,6 +1530,12 @@
        "      <th>Industry Type</th>\n",
        "      <th>Sub Industry</th>\n",
        "      <th>Business model</th>\n",
+       "      <th>Registered Address (Block &amp; Street)</th>\n",
+       "      <th>Registered Address  (Unit #)</th>\n",
+       "      <th>Registered Address  (Postal code)</th>\n",
+       "      <th>Operational Address \\n(Block &amp; Street)</th>\n",
+       "      <th>Operational Address \\n(Unit #)</th>\n",
+       "      <th>Operational Address \\n(Postal Code)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1541,6 +1547,12 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Other Specialised Wholesale</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>7 SOON LEE STREET</td>\n",
+       "      <td>04</td>\n",
+       "      <td>627608</td>\n",
+       "      <td>7 SOON LEE STREET</td>\n",
+       "      <td>04</td>\n",
+       "      <td>627608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1550,6 +1562,12 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Household Goods</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>785A WOODLANDS RISE</td>\n",
+       "      <td>122</td>\n",
+       "      <td>731785</td>\n",
+       "      <td>785A WOODLANDS RISE</td>\n",
+       "      <td>122</td>\n",
+       "      <td>731785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1559,6 +1577,12 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Machinery, Equipment &amp; Supplies</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>21 WOODLANDS CLOSE</td>\n",
+       "      <td>06</td>\n",
+       "      <td>737854</td>\n",
+       "      <td>21 WOODLANDS CLOSE</td>\n",
+       "      <td>06</td>\n",
+       "      <td>737854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1568,6 +1592,12 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Machinery, Equipment &amp; Supplies</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1 NORTH BRIDGE ROAD</td>\n",
+       "      <td>07</td>\n",
+       "      <td>179094</td>\n",
+       "      <td>1 NORTH BRIDGE ROAD</td>\n",
+       "      <td>07</td>\n",
+       "      <td>179094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1577,9 +1607,21 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Household Goods</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>260B ANG MO KIO STREET 21</td>\n",
+       "      <td>153</td>\n",
+       "      <td>562260</td>\n",
+       "      <td>260B ANG MO KIO STREET 21</td>\n",
+       "      <td>153</td>\n",
+       "      <td>562260</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1595,6 +1637,12 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Other Specialised Wholesale</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1 RAFFLES PLACE</td>\n",
+       "      <td>01</td>\n",
+       "      <td>48616</td>\n",
+       "      <td>1 RAFFLES PLACE</td>\n",
+       "      <td>01</td>\n",
+       "      <td>48616</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>364</th>\n",
@@ -1604,6 +1652,12 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Household Goods</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1 TUAS VIEW PLACE</td>\n",
+       "      <td>09</td>\n",
+       "      <td>637433</td>\n",
+       "      <td>1 TUAS VIEW PLACE</td>\n",
+       "      <td>09</td>\n",
+       "      <td>637433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>365</th>\n",
@@ -1613,6 +1667,12 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Household Goods</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>660C TAMPINES STREET 64</td>\n",
+       "      <td>140</td>\n",
+       "      <td>523660</td>\n",
+       "      <td>660C TAMPINES STREET 64</td>\n",
+       "      <td>140</td>\n",
+       "      <td>523660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>366</th>\n",
@@ -1622,6 +1682,12 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Machinery, Equipment &amp; Supplies</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>318B TENGAH PARK AVENUE</td>\n",
+       "      <td>516</td>\n",
+       "      <td>692318</td>\n",
+       "      <td>318B TENGAH PARK AVENUE</td>\n",
+       "      <td>516</td>\n",
+       "      <td>692318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>367</th>\n",
@@ -1631,10 +1697,16 @@
        "      <td>Wholesale Trade</td>\n",
        "      <td>Food, Beverages &amp; Tobacco</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>897C WOODLANDS DRIVE 50</td>\n",
+       "      <td>198</td>\n",
+       "      <td>732897</td>\n",
+       "      <td>897C WOODLANDS DRIVE 50</td>\n",
+       "      <td>198</td>\n",
+       "      <td>732897</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>368 rows × 6 columns</p>\n",
+       "<p>368 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1651,30 +1723,69 @@
        "366           NaN  SOLE PROPRIETORSHIP/ PARTNERSHIP               Others   \n",
        "367           NaN  SOLE PROPRIETORSHIP/ PARTNERSHIP               Others   \n",
        "\n",
-       "       Industry Type                     Sub Industry Business model  \n",
-       "0    Wholesale Trade      Other Specialised Wholesale            NaN  \n",
-       "1    Wholesale Trade                  Household Goods            NaN  \n",
-       "2    Wholesale Trade  Machinery, Equipment & Supplies            NaN  \n",
-       "3    Wholesale Trade  Machinery, Equipment & Supplies            NaN  \n",
-       "4    Wholesale Trade                  Household Goods            NaN  \n",
-       "..               ...                              ...            ...  \n",
-       "363  Wholesale Trade      Other Specialised Wholesale            NaN  \n",
-       "364  Wholesale Trade                  Household Goods            NaN  \n",
-       "365  Wholesale Trade                  Household Goods            NaN  \n",
-       "366  Wholesale Trade  Machinery, Equipment & Supplies            NaN  \n",
-       "367  Wholesale Trade        Food, Beverages & Tobacco            NaN  \n",
+       "       Industry Type                     Sub Industry Business model  \\\n",
+       "0    Wholesale Trade      Other Specialised Wholesale            NaN   \n",
+       "1    Wholesale Trade                  Household Goods            NaN   \n",
+       "2    Wholesale Trade  Machinery, Equipment & Supplies            NaN   \n",
+       "3    Wholesale Trade  Machinery, Equipment & Supplies            NaN   \n",
+       "4    Wholesale Trade                  Household Goods            NaN   \n",
+       "..               ...                              ...            ...   \n",
+       "363  Wholesale Trade      Other Specialised Wholesale            NaN   \n",
+       "364  Wholesale Trade                  Household Goods            NaN   \n",
+       "365  Wholesale Trade                  Household Goods            NaN   \n",
+       "366  Wholesale Trade  Machinery, Equipment & Supplies            NaN   \n",
+       "367  Wholesale Trade        Food, Beverages & Tobacco            NaN   \n",
        "\n",
-       "[368 rows x 6 columns]"
+       "    Registered Address (Block & Street) Registered Address  (Unit #)  \\\n",
+       "0                     7 SOON LEE STREET                           04   \n",
+       "1                   785A WOODLANDS RISE                          122   \n",
+       "2                    21 WOODLANDS CLOSE                           06   \n",
+       "3                   1 NORTH BRIDGE ROAD                           07   \n",
+       "4             260B ANG MO KIO STREET 21                          153   \n",
+       "..                                  ...                          ...   \n",
+       "363                     1 RAFFLES PLACE                           01   \n",
+       "364                   1 TUAS VIEW PLACE                           09   \n",
+       "365             660C TAMPINES STREET 64                          140   \n",
+       "366             318B TENGAH PARK AVENUE                          516   \n",
+       "367             897C WOODLANDS DRIVE 50                          198   \n",
+       "\n",
+       "    Registered Address  (Postal code) Operational Address \\n(Block & Street)  \\\n",
+       "0                              627608                      7 SOON LEE STREET   \n",
+       "1                              731785                    785A WOODLANDS RISE   \n",
+       "2                              737854                     21 WOODLANDS CLOSE   \n",
+       "3                              179094                    1 NORTH BRIDGE ROAD   \n",
+       "4                              562260              260B ANG MO KIO STREET 21   \n",
+       "..                                ...                                    ...   \n",
+       "363                             48616                        1 RAFFLES PLACE   \n",
+       "364                            637433                      1 TUAS VIEW PLACE   \n",
+       "365                            523660                660C TAMPINES STREET 64   \n",
+       "366                            692318                318B TENGAH PARK AVENUE   \n",
+       "367                            732897                897C WOODLANDS DRIVE 50   \n",
+       "\n",
+       "    Operational Address \\n(Unit #) Operational Address \\n(Postal Code)  \n",
+       "0                               04                              627608  \n",
+       "1                              122                              731785  \n",
+       "2                               06                              737854  \n",
+       "3                               07                              179094  \n",
+       "4                              153                              562260  \n",
+       "..                             ...                                 ...  \n",
+       "363                             01                               48616  \n",
+       "364                             09                              637433  \n",
+       "365                            140                              523660  \n",
+       "366                            516                              692318  \n",
+       "367                            198                              732897  \n",
+       "\n",
+       "[368 rows x 12 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Select only the \"Ownership Type\" column\n",
-    "Fresh_Leads_formatted_x = Fresh_Leads_formatted[[\"Business Type\", \"Ownership Type\", \"Parent Industry Type\", \"Industry Type\", \"Sub Industry\", \"Business model\"]]\n",
+    "Fresh_Leads_formatted_x = Fresh_Leads_formatted[[\"Business Type\", \"Ownership Type\", \"Parent Industry Type\", \"Industry Type\", \"Sub Industry\", \"Business model\",\"Registered Address (Block & Street)\",  \"Registered Address  (Unit #)\", \"Registered Address  (Postal code)\",  \"Operational Address \\n(Block & Street)\", \"Operational Address \\n(Unit #)\", \"Operational Address \\n(Postal Code)\"]]\n",
     "Fresh_Leads_formatted_x"
    ]
   },
