--- a/test_2.ipynb
+++ b/test_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "488092da",
    "metadata": {},
    "outputs": [],
@@ -27,274 +27,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "aeb09a5e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ePOS Code</th>\n",
-       "      <th>Company Code</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>ACRA REGISTERED NAME</th>\n",
-       "      <th>Brand/Deal Name/Business Name</th>\n",
-       "      <th>Sub Domain Link (If Lead is already available in Backend) Fill only when EPOS client</th>\n",
-       "      <th>Tele Sales or MR (For KPI - Internal)</th>\n",
-       "      <th>Name of the Market Researcher</th>\n",
-       "      <th>Original Source (Marketing)</th>\n",
-       "      <th>Marketing Source (Do not fill anything if the leads are from Hubspot, EPOS clients)</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PIC Name Designation 3</th>\n",
-       "      <th>PIC NAME 3 Contact Number</th>\n",
-       "      <th>PIC 3 email address</th>\n",
-       "      <th>FB/Insta/Tik Tok/Linkedin Contact</th>\n",
-       "      <th>Current ePOS Client ?</th>\n",
-       "      <th>If ePOS Client, which product they are using?</th>\n",
-       "      <th>Is this deal part of the Gov List?</th>\n",
-       "      <th>Source from Market Researcher</th>\n",
-       "      <th>Contact Number from Lusha?</th>\n",
-       "      <th>Phone number Verified ?</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-11-10</td>\n",
-       "      <td>BELL 1 SINGAPORE PTE. LTD.</td>\n",
-       "      <td>BELL 1 SINGAPORE PTE. LTD.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-11-10</td>\n",
-       "      <td>NUU&amp;NII PTE. LTD.</td>\n",
-       "      <td>NUU&amp;NII PTE. LTD.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-11-10</td>\n",
-       "      <td>CLOUD FRONTIER ASIA PTE. LTD.</td>\n",
-       "      <td>CLOUD FRONTIER ASIA PTE. LTD.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-11-10</td>\n",
-       "      <td>GOLDEN GARLAND COMMUNICATION PTE. LTD.</td>\n",
-       "      <td>GOLDEN GARLAND COMMUNICATION PTE. LTD.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-11-10</td>\n",
-       "      <td>XINYUAN SHOES PTE. LTD.</td>\n",
-       "      <td>XINYUAN SHOES PTE. LTD.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 62 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   ePOS Code  Company Code       Date                    ACRA REGISTERED NAME  \\\n",
-       "0        NaN           NaN 2025-11-10              BELL 1 SINGAPORE PTE. LTD.   \n",
-       "1        NaN           NaN 2025-11-10                       NUU&NII PTE. LTD.   \n",
-       "2        NaN           NaN 2025-11-10           CLOUD FRONTIER ASIA PTE. LTD.   \n",
-       "3        NaN           NaN 2025-11-10  GOLDEN GARLAND COMMUNICATION PTE. LTD.   \n",
-       "4        NaN           NaN 2025-11-10                 XINYUAN SHOES PTE. LTD.   \n",
-       "\n",
-       "            Brand/Deal Name/Business Name  \\\n",
-       "0              BELL 1 SINGAPORE PTE. LTD.   \n",
-       "1                       NUU&NII PTE. LTD.   \n",
-       "2           CLOUD FRONTIER ASIA PTE. LTD.   \n",
-       "3  GOLDEN GARLAND COMMUNICATION PTE. LTD.   \n",
-       "4                 XINYUAN SHOES PTE. LTD.   \n",
-       "\n",
-       "   Sub Domain Link (If Lead is already available in Backend) Fill only when EPOS client  \\\n",
-       "0                                                NaN                                      \n",
-       "1                                                NaN                                      \n",
-       "2                                                NaN                                      \n",
-       "3                                                NaN                                      \n",
-       "4                                                NaN                                      \n",
-       "\n",
-       "   Tele Sales or MR (For KPI - Internal)  Name of the Market Researcher  \\\n",
-       "0                                    NaN                            NaN   \n",
-       "1                                    NaN                            NaN   \n",
-       "2                                    NaN                            NaN   \n",
-       "3                                    NaN                            NaN   \n",
-       "4                                    NaN                            NaN   \n",
-       "\n",
-       "   Original Source (Marketing)  \\\n",
-       "0                          NaN   \n",
-       "1                          NaN   \n",
-       "2                          NaN   \n",
-       "3                          NaN   \n",
-       "4                          NaN   \n",
-       "\n",
-       "   Marketing Source (Do not fill anything if the leads are from Hubspot, EPOS clients)  \\\n",
-       "0                                                NaN                                     \n",
-       "1                                                NaN                                     \n",
-       "2                                                NaN                                     \n",
-       "3                                                NaN                                     \n",
-       "4                                                NaN                                     \n",
-       "\n",
-       "   ... PIC Name Designation 3 PIC NAME 3 Contact Number  PIC 3 email address  \\\n",
-       "0  ...                    NaN                       NaN                  NaN   \n",
-       "1  ...                    NaN                       NaN                  NaN   \n",
-       "2  ...                    NaN                       NaN                  NaN   \n",
-       "3  ...                    NaN                       NaN                  NaN   \n",
-       "4  ...                    NaN                       NaN                  NaN   \n",
-       "\n",
-       "   FB/Insta/Tik Tok/Linkedin Contact  Current ePOS Client ?  \\\n",
-       "0                                NaN                    NaN   \n",
-       "1                                NaN                    NaN   \n",
-       "2                                NaN                    NaN   \n",
-       "3                                NaN                    NaN   \n",
-       "4                                NaN                    NaN   \n",
-       "\n",
-       "   If ePOS Client, which product they are using?  \\\n",
-       "0                                            NaN   \n",
-       "1                                            NaN   \n",
-       "2                                            NaN   \n",
-       "3                                            NaN   \n",
-       "4                                            NaN   \n",
-       "\n",
-       "   Is this deal part of the Gov List? Source from Market Researcher  \\\n",
-       "0                                 NaN                           NaN   \n",
-       "1                                 NaN                           NaN   \n",
-       "2                                 NaN                           NaN   \n",
-       "3                                 NaN                           NaN   \n",
-       "4                                 NaN                           NaN   \n",
-       "\n",
-       "   Contact Number from Lusha? Phone number Verified ?  \n",
-       "0                         NaN                     NaN  \n",
-       "1                         NaN                     NaN  \n",
-       "2                         NaN                     NaN  \n",
-       "3                         NaN                     NaN  \n",
-       "4                         NaN                     NaN  \n",
-       "\n",
-       "[5 rows x 62 columns]"
+       "(368, 62)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Fresh_Leads_formatted = pd.read_excel(\"Fresh_Leads_formatted.xlsx\")\n",
-    "Fresh_Leads_formatted.head()"
+    "Fresh_Leads_formatted.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "a43576e1",
    "metadata": {},
    "outputs": [
@@ -748,7 +503,7 @@
        "[10 rows x 62 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
