--- a/Epos_Backend_Confirmation.ipynb
+++ b/Epos_Backend_Confirmation.ipynb
@@ -2657,7 +2657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fresh_Leads_Nov11.to_csv(\"Golden_Data/Fresh_Leads_with_PhoneNumber_Nov11.csv\", index=False)"
+    "# Fresh_Leads_Nov11.to_csv(\"Golden_Data/Fresh_Leads_with_PhoneNumber_Nov11.csv\", index=False)"
    ]
   },
   {
