--- a/Lead_Gen_Pipeline_Silver_3.ipynb
+++ b/Lead_Gen_Pipeline_Silver_3.ipynb
@@ -5,7 +5,7 @@
    "id": "8b0e7f7c",
    "metadata": {},
    "source": [
-    "### Website"
+    "### Data Mining in Website (Silver 3)"
    ]
   },
   {
@@ -15,27 +15,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import glob\n",
     "import os\n",
-    "import re\n",
-    "import time\n",
+    "import requests\n",
+    "import aiohttp\n",
+    "import asyncio\n",
+    "import nest_asyncio\n",
     "import pandas as pd\n",
-    "from apify_client import ApifyClient\n",
+    "import time\n",
+    "import scrapy\n",
+    "from scrapy_playwright.page import PageMethod\n",
     "from bs4 import BeautifulSoup\n",
+    "import nest_asyncio\n",
+    "import glob\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from fuzzywuzzy import fuzz, process\n",
     "import re\n",
-    "import json\n",
-    "from requests.exceptions import HTTPError, ConnectionError\n",
-    "from urllib3.exceptions import ProtocolError\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI\n"
+    "from apify_client import ApifyClient\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "d1d11e0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parquet_path = \"./Staging/Gold/cleaned_second_592.parquet\"\n",
+    "if os.path.exists(parquet_path):\n",
+    "    RecordOwl_Leads = pd.read_parquet(parquet_path, engine=\"fastparquet\")\n",
+    "    print(f\"Loaded {len(RecordOwl_Leads)} rows from {parquet_path}\")\n",
+    "    print(RecordOwl_Leads.shape)\n",
+    "else:\n",
+    "    raise FileNotFoundError(f\"Parquet file not found at {parquet_path}\")\n",
+    "\n",
+    "filtered_df = RecordOwl_Leads[\n",
+    "    RecordOwl_Leads[\"PIC NAME 1 Contact Number\"].notna() &\n",
+    "    (RecordOwl_Leads[\"PIC NAME 1 Contact Number\"] != \"\")\n",
+    "]\n",
+    "\n",
+    "filtered_df = filtered_df[\n",
+    "    (filtered_df[\"Facebook Page\"].notna()) & \n",
+    "    (filtered_df[\"Facebook Page\"] != \"\")]\n",
+    "\n",
+    "filtered_df = filtered_df[[\"PIC NAME 1 Contact Number\", \"Facebook Page\"]]\n",
+    "\n",
+    "filtered_df.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "13a179cb",
    "metadata": {},
    "outputs": [
@@ -52,10 +82,7 @@
     }
    ],
    "source": [
-    "import asyncio\n",
-    "import os\n",
-    "import time\n",
-    "from apify_client import ApifyClient\n",
+    "\n",
     "\n",
     "# --- Initialize Apify client ---\n",
     "APIFY_TOKEN = os.getenv(\"APIFY_TOKEN\", \"apify_api_0HQ8fc5fw5T1aosdacxKQNQYVBAEwi3tXaJc\")\n",
